[project]
name = "nikto-py"
version = "0.1.0"
description = "nikto like web application scanner with python"
authors = [
    { name = "RyosukeDTomita", email = "d310151c2@gmail.com" }
]
dependencies = []
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/nikto_py"]
